# ksession

./: Cargo.toml  README.md  startkmp.sh
autostart/: Cargo.toml
config/: Cargo.toml  lxqt.toml  session.toml  windowmanagers.toml
core/: Cargo.toml
core/src/: leave.rs  lib.rs
k-config-session/: Cargo.toml
k-leave/: Cargo.toml
k-session/: Cargo.toml
k_config_session/: Cargo.toml
k_config_session/src/gui/: constants.rs  root.rs  settings.rs
k_config_session/src/gui/pages/: env_advanced.rs  general_page.rs
k_config_session/src/gui/pages/auto_start/: auto_start_item.rs  auto_start_page.rs  auto_start_utils.rs
k_config_session/src/gui/pages/env_advanced/: env_page.rs
k_config_session/src/gui/pages_model/: default_app_page.rs  env_advanced.rs  general_page.rs
k_config_session/src/gui/pages_model/auto_start/: auto_start_edit_page.rs  auto_start_item.rs  auto_start_model.rs  auto_start_page.rs  auto_start_utils.rs
k_config_session/src/gui/pages_model/env_advanced/: env_edit_page.rs
k_leave/: Cargo.toml
k_leave/src/: cli.rs  main.rs
k_leave/src/gui/: action_button.rs  constants.rs  gui.rs
k_session/: Cargo.toml
k_session/src/: dbus.rs  main.rs  modmg.rs  sessionapp.rs  sm_xdg.rs
k_session/src/dbus/: client.rs
lde_config_session/: Cargo.toml
lde_config_session/src/: gui.rs  main.rs
lde_config_session/src/gui/: constants.rs  pages.rs  root.rs  styles.rs  tab.rs
lde_config_session/src/gui/pages/: auto_start.rs  auto_start_page.rs  default_app_page.rs  env_page.rs  general_page.rs
lde_config_session/src/gui/pages/auto_start/: auto_start_edit_page.rs  auto_start_item.rs  auto_start_page.rs  auto_start_utils.rs
lde_config_session/src/gui/pages/env_advanced/: env_entry_page.rs  env_page.rs
lde_config_session/src/gui/pages_model/: auto_start.rs  general_page.rs
lde_config_session/src/gui/pages_model/auto_start/: auto_start_model.rs  auto_start_page.rs  auto_start_utils.rs
lde_config_session/src/gui/pages_model/env_advanced/: env_page.rs
lde_leave/: Cargo.toml
lde_leave/src/: backend.rs  cli.rs  gui.rs  main.rs
lde_leave/src/backend/: helpers.rs  lde_power.rs  lde_power_provider.rs
lde_leave/src/cli/: cli.rs
lde_leave/src/gui/: action_button.rs  constants.rs  gui.rs  styles.rs
lde_session/: Cargo.toml
lde_session/src/: eventloop.rs  main.rs  modmg.rs  sessionapp.rs  sm_xdg.rs  wmmanager.rs
lde_session/src/dbus/: server.rs
lde_session/src/eventloop/: mainloop.rs
xsession/: koompi-desktop.desktop  koompi-session.desktop  lde.desktop
