[package]
name = "ksession"
version = "0.1.0"
authors = ["Ma veasna <maveasnalearntosolve@gmail>", "Hang leang <hangleang127@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lde_config_session",
    "lde_leave",
    "lde_session",
    "core"
]
[dependencies]
structopt = "0.3"
console = "0.14"
# lde_leave = {version="0.1", path="lde_leave"}
# lde_session = {version="0.1", path="lde_session"}
# lde_config_session = {version="0.1", path="lde_config_session"}
# session_core = {version="0.1", path="core"}



