[package]
name = "ksession"
version = "0.1.0"
authors = ["Ma veasna <maveasnalearntosolve@gmail>", "Hang leang <hangleang127@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "k_config_session",
    "k_leave",
    "k_session",
]
[dependencies]