[package]
name = "ksession"
version = "0.1.0"
authors = ["Ma veasna <maveasnalearntosolve@gmail>", "Hang leang <hangleang127@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "k_config_session",
    "k_leave",
    "k_session"
]
[dependencies]
structopt = "0.3"
console = "0.14"
k_leave = {version="0.1", path="k_leave"}
k_session = {version="0.1", path="k_session"}
k_config_session = {version="0.1", path="k_config_session"}



