[package]
name = "k_config_session"
version = "0.1.0"
authors = ["Ma veasna <maveasnalearntosolve@gmail>", "Hang leang <hangleang127@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["debug", "svg", "tokio"] }
iced_style = "0.2"
iced_custom_widget = { git="https://github.com/leang27/iced_custom_widget", branch="master" }
serde = "1.0"
serde_json = "1.0"
xdg = "2.2"
config = "0.10.1"
serde_derive = "1.0"
freedesktop_entry_parser = "1.1.1"
# native-dialog = "0.5.2"
nfd2 = "0.2.3"
is_executable = "0.1"
toml = "0.5"