[package]
name = "lde_config_session"
version = "0.1.0"
authors = ["Ma veasna <maveasnalearntosolve@gmail>", "Hang leang <hangleang127@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["debug", "svg", "tokio"] }
iced_style = "0.2"
