[package]
name = "lde_session"
version = "0.1.0"
authors = ["cambodiacoder <maveasnalearntosolve@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# structopt = "0.3"
clap = "2.33.3"
# calloop = "0.7.0"
# nix = "0.19"
# dbus-tokio = "0.6.0"
# dbus = "0.9.0"
is_executable = "0.1.2"
wmctrl = "*"
xdg = "2.2.0"
# toml = "0.5.8"
freedesktop_entry_parser = "1.1.1"
tokio = { version = "1", features = ["full"] }

